[CSS] Fix error recovery of invalid content in block https://bugs.webkit.org/show_bug.cgi?id=285114 rdar://142187930

Reviewed by Antti Koivisto.

https://drafts.csswg.org/css-syntax/#block-contents

While parsing invalid content inside a block,
we use qualified rule error recovery.
For the more specific case that the block is a <declaration-list>,
we use the "consume until semicolon" error recovery.

* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/nested-error-recovery-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/nested-error-recovery.html: Added.
* Source/WebCore/css/parser/CSSParserImpl.cpp:
(WebCore::CSSParserImpl::consumeBlockContent):

Canonical link: https://commits.webkit.org/289429@main